fix nav in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1592,6 +1592,7 @@ h2 span.badge {
 
     nav {
         border-bottom-color: #464646;
+        background-color: #191919;
     }
 
     .menu {
